tests/e2e/function_without_return_returns_value2.error
Error: syntax error in story at line 5, column 11

5|          return 0
                   ^

E0110: Function has no return output defined. Only `return` is allowed.
