tests/e2e/function_without_return_returns_value2.story
function my_function k1:int
    items = [1]
    if true
        foreach items as i
            return 0
